UsandoANTLR/GrammarParser.py
# Generated from Grammar.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GrammarParser ( Parser ):

    grammarFileName = "Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'function'", "'('", "')'", "':'", "'type'", 
                     "'='", "'array'", "'['", "']'", "'of'", "'struct'", 
                     "'{'", "'}'", "';'", "','", "'var'", "'if'", "'else'", 
                     "'while'", "'do'", "'break'", "'continue'", "'&&'", 
                     "'||'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
                     "'+'", "'-'", "'*'", "'/'", "'++'", "'--'", "'!'", 
                     "'.'", "'integer'", "'char'", "'boolean'", "'string'", 
                     "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "TRUE", "FALSE", 
                      "CHR", "STR", "NUM", "Id", "WS" ]

    RULE_program = 0
    RULE_lde = 1
    RULE_de = 2
    RULE_df = 3
    RULE_dt = 4
    RULE_dc = 5
    RULE_lp = 6
    RULE_b = 7
    RULE_ldv = 8
    RULE_ls = 9
    RULE_dv = 10
    RULE_li = 11
    RULE_s = 12
    RULE_e = 13
    RULE_l = 14
    RULE_r = 15
    RULE_y = 16
    RULE_f = 17
    RULE_le = 18
    RULE_lv = 19
    RULE_idd = 20
    RULE_idu = 21
    RULE_t = 22

    ruleNames =  [ "program", "lde", "de", "df", "dt", "dc", "lp", "b", 
                   "ldv", "ls", "dv", "li", "s", "e", "l", "r", "y", "f", 
                   "le", "lv", "idd", "idu", "t" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    TRUE=43
    FALSE=44
    CHR=45
    STR=46
    NUM=47
    Id=48
    WS=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lde(self):
            return self.getTypedRuleContext(GrammarParser.LdeContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = GrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.lde(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LdeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def de(self):
            return self.getTypedRuleContext(GrammarParser.DeContext,0)


        def lde(self):
            return self.getTypedRuleContext(GrammarParser.LdeContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_lde

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLde" ):
                listener.enterLde(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLde" ):
                listener.exitLde(self)



    def lde(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = GrammarParser.LdeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_lde, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.de()
            self._ctx.stop = self._input.LT(-1)
            self.state = 55
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = GrammarParser.LdeContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_lde)
                    self.state = 51
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 52
                    self.de() 
                self.state = 57
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class DeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def df(self):
            return self.getTypedRuleContext(GrammarParser.DfContext,0)


        def dt(self):
            return self.getTypedRuleContext(GrammarParser.DtContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_de

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDe" ):
                listener.enterDe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDe" ):
                listener.exitDe(self)




    def de(self):

        localctx = GrammarParser.DeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_de)
        try:
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.df()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.dt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idd(self):
            return self.getTypedRuleContext(GrammarParser.IddContext,0)


        def lp(self):
            return self.getTypedRuleContext(GrammarParser.LpContext,0)


        def t(self):
            return self.getTypedRuleContext(GrammarParser.TContext,0)


        def b(self):
            return self.getTypedRuleContext(GrammarParser.BContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_df

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDf" ):
                listener.enterDf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDf" ):
                listener.exitDf(self)




    def df(self):

        localctx = GrammarParser.DfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_df)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(GrammarParser.T__0)
            self.state = 63
            self.idd()
            self.state = 64
            self.match(GrammarParser.T__1)
            self.state = 65
            self.lp(0)
            self.state = 66
            self.match(GrammarParser.T__2)
            self.state = 67
            self.match(GrammarParser.T__3)
            self.state = 68
            self.t()
            self.state = 69
            self.b()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idd(self):
            return self.getTypedRuleContext(GrammarParser.IddContext,0)


        def NUM(self):
            return self.getToken(GrammarParser.NUM, 0)

        def t(self):
            return self.getTypedRuleContext(GrammarParser.TContext,0)


        def dc(self):
            return self.getTypedRuleContext(GrammarParser.DcContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_dt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDt" ):
                listener.enterDt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDt" ):
                listener.exitDt(self)




    def dt(self):

        localctx = GrammarParser.DtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dt)
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.match(GrammarParser.T__4)
                self.state = 72
                self.idd()
                self.state = 73
                self.match(GrammarParser.T__5)
                self.state = 74
                self.match(GrammarParser.T__6)
                self.state = 75
                self.match(GrammarParser.T__7)
                self.state = 76
                self.match(GrammarParser.NUM)
                self.state = 77
                self.match(GrammarParser.T__8)
                self.state = 78
                self.match(GrammarParser.T__9)
                self.state = 79
                self.t()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.match(GrammarParser.T__4)
                self.state = 82
                self.idd()
                self.state = 83
                self.match(GrammarParser.T__5)
                self.state = 84
                self.match(GrammarParser.T__10)
                self.state = 85
                self.match(GrammarParser.T__11)
                self.state = 86
                self.dc(0)
                self.state = 87
                self.match(GrammarParser.T__12)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.match(GrammarParser.T__4)
                self.state = 90
                self.idd()
                self.state = 91
                self.match(GrammarParser.T__5)
                self.state = 92
                self.t()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def li(self):
            return self.getTypedRuleContext(GrammarParser.LiContext,0)


        def t(self):
            return self.getTypedRuleContext(GrammarParser.TContext,0)


        def dc(self):
            return self.getTypedRuleContext(GrammarParser.DcContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_dc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDc" ):
                listener.enterDc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDc" ):
                listener.exitDc(self)



    def dc(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = GrammarParser.DcContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_dc, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.li(0)
            self.state = 98
            self.match(GrammarParser.T__3)
            self.state = 99
            self.t()
            self._ctx.stop = self._input.LT(-1)
            self.state = 109
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = GrammarParser.DcContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_dc)
                    self.state = 101
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 102
                    self.match(GrammarParser.T__13)
                    self.state = 103
                    self.li(0)
                    self.state = 104
                    self.match(GrammarParser.T__3)
                    self.state = 105
                    self.t() 
                self.state = 111
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class LpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idd(self):
            return self.getTypedRuleContext(GrammarParser.IddContext,0)


        def t(self):
            return self.getTypedRuleContext(GrammarParser.TContext,0)


        def lp(self):
            return self.getTypedRuleContext(GrammarParser.LpContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_lp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLp" ):
                listener.enterLp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLp" ):
                listener.exitLp(self)



    def lp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = GrammarParser.LpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_lp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.idd()
            self.state = 114
            self.match(GrammarParser.T__3)
            self.state = 115
            self.t()
            self._ctx.stop = self._input.LT(-1)
            self.state = 125
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = GrammarParser.LpContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_lp)
                    self.state = 117
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 118
                    self.match(GrammarParser.T__14)
                    self.state = 119
                    self.idd()
                    self.state = 120
                    self.match(GrammarParser.T__3)
                    self.state = 121
                    self.t() 
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ldv(self):
            return self.getTypedRuleContext(GrammarParser.LdvContext,0)


        def ls(self):
            return self.getTypedRuleContext(GrammarParser.LsContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_b

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterB" ):
                listener.enterB(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitB" ):
                listener.exitB(self)




    def b(self):

        localctx = GrammarParser.BContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_b)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(GrammarParser.T__11)
            self.state = 129
            self.ldv(0)
            self.state = 130
            self.ls(0)
            self.state = 131
            self.match(GrammarParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LdvContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dv(self):
            return self.getTypedRuleContext(GrammarParser.DvContext,0)


        def ldv(self):
            return self.getTypedRuleContext(GrammarParser.LdvContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_ldv

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLdv" ):
                listener.enterLdv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLdv" ):
                listener.exitLdv(self)



    def ldv(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = GrammarParser.LdvContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_ldv, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.dv()
            self._ctx.stop = self._input.LT(-1)
            self.state = 140
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = GrammarParser.LdvContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_ldv)
                    self.state = 136
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 137
                    self.dv() 
                self.state = 142
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class LsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s(self):
            return self.getTypedRuleContext(GrammarParser.SContext,0)


        def ls(self):
            return self.getTypedRuleContext(GrammarParser.LsContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_ls

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLs" ):
                listener.enterLs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLs" ):
                listener.exitLs(self)



    def ls(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = GrammarParser.LsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_ls, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.s()
            self._ctx.stop = self._input.LT(-1)
            self.state = 150
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = GrammarParser.LsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_ls)
                    self.state = 146
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 147
                    self.s() 
                self.state = 152
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class DvContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def li(self):
            return self.getTypedRuleContext(GrammarParser.LiContext,0)


        def t(self):
            return self.getTypedRuleContext(GrammarParser.TContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_dv

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDv" ):
                listener.enterDv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDv" ):
                listener.exitDv(self)




    def dv(self):

        localctx = GrammarParser.DvContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_dv)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(GrammarParser.T__15)
            self.state = 154
            self.li(0)
            self.state = 155
            self.match(GrammarParser.T__3)
            self.state = 156
            self.t()
            self.state = 157
            self.match(GrammarParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idd(self):
            return self.getTypedRuleContext(GrammarParser.IddContext,0)


        def li(self):
            return self.getTypedRuleContext(GrammarParser.LiContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_li

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLi" ):
                listener.enterLi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLi" ):
                listener.exitLi(self)



    def li(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = GrammarParser.LiContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_li, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.idd()
            self._ctx.stop = self._input.LT(-1)
            self.state = 167
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = GrammarParser.LiContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_li)
                    self.state = 162
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 163
                    self.match(GrammarParser.T__14)
                    self.state = 164
                    self.idd() 
                self.state = 169
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class SContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def e(self):
            return self.getTypedRuleContext(GrammarParser.EContext,0)


        def s(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.SContext)
            else:
                return self.getTypedRuleContext(GrammarParser.SContext,i)


        def b(self):
            return self.getTypedRuleContext(GrammarParser.BContext,0)


        def lv(self):
            return self.getTypedRuleContext(GrammarParser.LvContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_s

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS" ):
                listener.enterS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS" ):
                listener.exitS(self)




    def s(self):

        localctx = GrammarParser.SContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_s)
        try:
            self.state = 208
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.match(GrammarParser.T__16)
                self.state = 171
                self.match(GrammarParser.T__1)
                self.state = 172
                self.e(0)
                self.state = 173
                self.match(GrammarParser.T__2)
                self.state = 174
                self.s()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.match(GrammarParser.T__16)
                self.state = 177
                self.match(GrammarParser.T__1)
                self.state = 178
                self.e(0)
                self.state = 179
                self.match(GrammarParser.T__2)
                self.state = 180
                self.s()
                self.state = 181
                self.match(GrammarParser.T__17)
                self.state = 182
                self.s()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 184
                self.match(GrammarParser.T__18)
                self.state = 185
                self.match(GrammarParser.T__1)
                self.state = 186
                self.e(0)
                self.state = 187
                self.match(GrammarParser.T__2)
                self.state = 188
                self.s()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 190
                self.match(GrammarParser.T__19)
                self.state = 191
                self.s()
                self.state = 192
                self.match(GrammarParser.T__18)
                self.state = 193
                self.match(GrammarParser.T__1)
                self.state = 194
                self.e(0)
                self.state = 195
                self.match(GrammarParser.T__2)
                self.state = 196
                self.match(GrammarParser.T__13)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 198
                self.b()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 199
                self.lv(0)
                self.state = 200
                self.match(GrammarParser.T__5)
                self.state = 201
                self.e(0)
                self.state = 202
                self.match(GrammarParser.T__13)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 204
                self.match(GrammarParser.T__20)
                self.state = 205
                self.match(GrammarParser.T__13)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 206
                self.match(GrammarParser.T__21)
                self.state = 207
                self.match(GrammarParser.T__13)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def l(self):
            return self.getTypedRuleContext(GrammarParser.LContext,0)


        def e(self):
            return self.getTypedRuleContext(GrammarParser.EContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_e

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterE" ):
                listener.enterE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitE" ):
                listener.exitE(self)



    def e(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = GrammarParser.EContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_e, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 211
            self.l(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 221
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 219
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = GrammarParser.EContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_e)
                        self.state = 213
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 214
                        self.match(GrammarParser.T__22)
                        self.state = 215
                        self.l(0)
                        pass
